--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,46 @@
-python_dateutil == 2.6.0
-setuptools >= 21.0.0
-flask_testing==0.6.1
-coverage>=4.0.3
-nose>=1.3.7
-pluggy>=0.3.1
-py>=1.4.31
-randomize>=0.13
+appnope==0.1.0
+asn1crypto==0.24.0
+backcall==0.1.0
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+clickclick==1.2.2
+connexion==1.1.15
+coverage==4.5.2
+cryptography==2.4.1
+decorator==4.3.0
+Flask==1.0.2
+flask-swagger-ui==3.18.0
+Flask-Testing==0.6.1
+idna==2.7
+inflection==0.3.1
+ipython==7.1.1
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.13.1
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.1.0
+nose==1.3.7
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==5.3.0
+pluggy==0.8.0
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
+py==1.7.0
+pycparser==2.19
+Pygments==2.2.0
+pyOpenSSL==18.0.0
+python-dateutil==2.6.0
+PyYAML==3.13
+randomize==0.14
+requests==2.20.1
+six==1.11.0
+swagger-spec-validator==2.4.1
+traitlets==4.3.2
+urllib3==1.24.1
+wcwidth==0.1.7
+Werkzeug==0.14.1
